--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -10,6 +10,7 @@ mlflow>=2.5.0
 fastapi>=0.100.0
 uvicorn[standard]>=0.23.0
 pydantic>=2.0.0
+pydantic-settings>=2.0.0
 
 # Data Processing
 scipy>=1.11.0
